# console-share

./: .gitignore  LICENSE  README.md  build-deb.sh  console-share  console-share.desktop  console-share.ini  console-share.py  console-share_1.0.0_all.deb  console-vga-proxy  pyproject.toml  requirements.txt
console_share/: __init__.py  websocat-help.txt
debian/: changelog  control  install  rules
src/console_share/: __init__.py  cli.py  config.py  incus.py  proxy.py
