[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "console-share"
version = "0.1.0"
description = "Proxy Incus console to TCP using websocat"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
dependencies = [
    "aiohttp>=3.8.0",
]

[project.scripts]
console-share = "console-share:main"

[tool.hatch.build.targets.wheel]
packages = ["console-share"]
