[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "console-share"
version = "0.1.1"
authors = [
    { name = "JetBalsa", email = "spam@balsa.info" }
]
description = "Network proxy tool for Incus console and shell connections"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "psutil>=5.8.0"
]

[project.scripts]
console-share = "console_share.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/console_share"]
